# PresidentStrategy

./: pyproject.toml
president_strategy/: __init__.py  __main__.py
